tests/machine/x/cobol/fun_three_args.error
error: cobc error: exit status 1
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:7: error: syntax error, unexpected USING
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob: in paragraph 'SUM3':
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:12: error: syntax error, unexpected PROCEDURE
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:13: error: 'A' is not defined
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:13: error: 'B' is not defined
/workspace/mochi/tests/machine/x/cobol/fun_three_args.cob:13: error: 'C' cannot be used here


source:
fun sum3(a: int, b: int, c: int): int {
  return a + b + c
}

print(sum3(1, 2, 3))  // 6
