tests/machine/x/cobol/fun_three_args.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. FUN-THREE-ARGS.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 FN-SUM3-RES PIC 9 VALUE 0.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       PERFORM FN_SUM3 USING 1 2 3
       DISPLAY FN_SUM3_RES
       STOP RUN.
       
       FN_SUM3.
           PROCEDURE DIVISION USING A B C.
               COMPUTE FN_SUM3_RES = A + B + C
               EXIT.
